vendor/utf8proc-sys/src/generated.rs

unsafe extern "C" {
    #[doc = " Maps the given UTF-8 string pointed to by `str` to a new UTF-8\n string, allocated dynamically by `malloc` and returned via `dstptr`.\n\n If the @ref UTF8PROC_NULLTERM flag in the `options` field is set,\n the length is determined by a NULL terminator, otherwise the\n parameter `strlen` is evaluated to determine the string length, but\n in any case the result will be NULL terminated (though it might\n contain NULL characters with the string if `str` contained NULL\n characters). Other flags in the `options` field are passed to the\n functions defined above, and regarded as described.  See also\n utf8proc_map_custom() to supply a custom codepoint transformation.\n\n In case of success the length of the new string is returned,\n otherwise a negative error code is returned.\n\n @note The memory of the new UTF-8 string will have been allocated\n with `malloc`, and should therefore be deallocated with `free`."]
    pub fn utf8proc_map(
        str_: *const utf8proc_uint8_t,
        strlen: utf8proc_ssize_t,
        dstptr: *mut *mut utf8proc_uint8_t,
        options: utf8proc_option_t,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " Like utf8proc_map(), but also takes a `custom_func` mapping function\n that is called on each codepoint in `str` before any other transformations\n (along with a `custom_data` pointer that is passed through to `custom_func`).\n The `custom_func` argument is ignored if it is `NULL`."]
    pub fn utf8proc_map_custom(
        str_: *const utf8proc_uint8_t,
        strlen: utf8proc_ssize_t,
        dstptr: *mut *mut utf8proc_uint8_t,
        options: utf8proc_option_t,
        custom_func: utf8proc_custom_func,
        custom_data: *mut ::std::os::raw::c_void,
    ) -> utf8proc_ssize_t;
}
unsafe extern "C" {
    #[doc = " @name Unicode normalization\n\n Returns a pointer to newly allocated memory of a NFD, NFC, NFKD, NFKC or\n NFKC_Casefold normalized version of the null-terminated string `str`.  These\n are shortcuts to calling utf8proc_map() with @ref UTF8PROC_NULLTERM\n combined with @ref UTF8PROC_STABLE and flags indicating the normalization.\n/\n/** @{ */\n/** NFD normalization (@ref UTF8PROC_DECOMPOSE)."]
    pub fn utf8proc_NFD(str_: *const utf8proc_uint8_t) -> *mut utf8proc_uint8_t;
}
unsafe extern "C" {
    #[doc = " NFC normalization (@ref UTF8PROC_COMPOSE)."]
    pub fn utf8proc_NFC(str_: *const utf8proc_uint8_t) -> *mut utf8proc_uint8_t;
}
unsafe extern "C" {
    #[doc = " NFKD normalization (@ref UTF8PROC_DECOMPOSE and @ref UTF8PROC_COMPAT)."]
    pub fn utf8proc_NFKD(str_: *const utf8proc_uint8_t) -> *mut utf8proc_uint8_t;
}
unsafe extern "C" {
    #[doc = " NFKC normalization (@ref UTF8PROC_COMPOSE and @ref UTF8PROC_COMPAT)."]
    pub fn utf8proc_NFKC(str_: *const utf8proc_uint8_t) -> *mut utf8proc_uint8_t;
}
unsafe extern "C" {
    #[doc = " NFKC_Casefold normalization (@ref UTF8PROC_COMPOSE and @ref UTF8PROC_COMPAT\n and @ref UTF8PROC_CASEFOLD and @ref UTF8PROC_IGNORE)."]
    pub fn utf8proc_NFKC_Casefold(str_: *const utf8proc_uint8_t) -> *mut utf8proc_uint8_t;
}
